# nen-sdk-python

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/nen_desktop/: __init__.py  client.py  exceptions.py
src/nen_sdk/: __init__.py  client.py  models.py
src/nen_sdk/nen_desktop/: __init__.py  models.py
tests/: conftest.py  test_client.py
